[tool.poetry]
name = "python-data-structures"
version = "0.1.0"
description = ""
authors = ["Fredson Chaves <fredsonchaves07@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
